--- a/src/locale/messages.en.xlf
+++ b/src/locale/messages.en.xlf
@@ -17,6 +17,10 @@
           <context context-type="sourcefile">src/app/features/portfolio/components/about-section/about-section.component.html</context>
           <context context-type="linenumber">5</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/shared/components/header/header.component.html</context>
+          <context context-type="linenumber">114</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="2738024077794806607" datatype="html">
         <source> Was als Leidenschaft und Traum begann, hat sich zu einer Lebensart entwickelt. Die ersten Berührungspunkte sammelte ich bei der Fotografie von Supercars. Inzwischen teste und fahre ich leidenschaftlich PS-starke Fahrzeuge im Sportwagen- und Elektrofahrzeug- Segment. Meine Abenteuer und Erfahrungen teile ich mit meiner Community, hauptsächlich auf Instagram und TikTok. Einen erfolgreichen Social Media Auftritt konnte ich jedoch nicht nur auf meinen eigenen Kanälen aufbauen, sondern auch für zahlreiche Firmen. Authentizität, starke Skills in Foto- und Videografie sowie fundiertes Social Media Wissen sind dabei mein Markenzeichen. Dabei agiere ich mit Leidenschaft und Herzblut. </source>
@@ -26,12 +30,32 @@
           <context context-type="linenumber">21,32</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="7218584840088949808" datatype="html">
+        <source>Schreibe mir eine Nachricht</source>
+        <target>Write me a message</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
+          <context context-type="linenumber">4</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="397497450705980813" datatype="html">
+        <source>Kontakt</source>
+        <target>Contact</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/shared/components/header/header.component.html</context>
+          <context context-type="linenumber">170</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="8953033926734869941" datatype="html">
         <source>Name</source>
         <target>Name</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">21</context>
+          <context context-type="linenumber">23</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1617823982318984595" datatype="html">
@@ -39,7 +63,7 @@
         <target> You have to type in a name </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">37,39</context>
+          <context context-type="linenumber">39,41</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4768749765465246664" datatype="html">
@@ -47,7 +71,7 @@
         <target>Email</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">45</context>
+          <context context-type="linenumber">47</context>
         </context-group>
       </trans-unit>
       <trans-unit id="2559267207987101980" datatype="html">
@@ -55,7 +79,7 @@
         <target> You have to type in an email </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">62,64</context>
+          <context context-type="linenumber">64,66</context>
         </context-group>
       </trans-unit>
       <trans-unit id="8503869362614223418" datatype="html">
@@ -63,7 +87,7 @@
         <target> Invalid email </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">69,71</context>
+          <context context-type="linenumber">71,73</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5644795770167690835" datatype="html">
@@ -71,7 +95,7 @@
         <target>Message</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">78</context>
+          <context context-type="linenumber">80</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1535365089018575770" datatype="html">
@@ -79,7 +103,7 @@
         <target> You have to type in a message </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">94,96</context>
+          <context context-type="linenumber">96,98</context>
         </context-group>
       </trans-unit>
       <trans-unit id="8970769016607182045" datatype="html">
@@ -87,7 +111,7 @@
         <target>Send</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">132</context>
+          <context context-type="linenumber">134</context>
         </context-group>
       </trans-unit>
       <trans-unit id="2060922466127038507" datatype="html">
@@ -95,7 +119,7 @@
         <target>Oops, somthing went wrong!</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">149</context>
+          <context context-type="linenumber">151</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4915196029691427866" datatype="html">
@@ -103,7 +127,7 @@
         <target> Please try again. If the problem persists please contact me via the email address listed at the end of the page.  </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">150,153</context>
+          <context context-type="linenumber">152,155</context>
         </context-group>
       </trans-unit>
       <trans-unit id="8125840596336092063" datatype="html">
@@ -111,7 +135,7 @@
         <target>Try again</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">169</context>
+          <context context-type="linenumber">171</context>
         </context-group>
       </trans-unit>
       <trans-unit id="8036645955413254181" datatype="html">
@@ -119,7 +143,7 @@
         <target>Thank you very much!</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">180</context>
+          <context context-type="linenumber">182</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1568587018136647077" datatype="html">
@@ -127,7 +151,7 @@
         <target> I will respond to your message shortly. </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/contact-section/contact-section.component.html</context>
-          <context context-type="linenumber">181,183</context>
+          <context context-type="linenumber">183,185</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3035053213475890371" datatype="html">
@@ -185,6 +209,10 @@
           <context context-type="sourcefile">src/app/features/portfolio/components/projects-section/projects-section.component.html</context>
           <context context-type="linenumber">5</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/shared/components/header/header.component.html</context>
+          <context context-type="linenumber">153</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="1761357231719775024" datatype="html">
         <source>Was mache Ich?</source>
@@ -201,6 +229,10 @@
           <context context-type="sourcefile">src/app/features/portfolio/components/services-section/services-section.component.html</context>
           <context context-type="linenumber">5</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/shared/components/header/header.component.html</context>
+          <context context-type="linenumber">131</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="8204462860419005520" datatype="html">
         <source>Fotografie &amp; Videografie</source>
@@ -215,7 +247,7 @@
         <target>From individual catalog pictures to an extensive image film: I'll take care of it!</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/services-section/services-section.component.ts</context>
-          <context context-type="linenumber">15</context>
+          <context context-type="linenumber">14</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1981886251131321983" datatype="html">
@@ -231,7 +263,7 @@
         <target>With my strategic know-how, I offer the entire spectrum for a successful social media presence.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/services-section/services-section.component.ts</context>
-          <context context-type="linenumber">20</context>
+          <context context-type="linenumber">19</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3580934081926380521" datatype="html">
@@ -247,7 +279,7 @@
         <target>Increase reach, advertise products or services via social media? - By cooperating with me you can reach hundreds of thousands of people.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/services-section/services-section.component.ts</context>
-          <context context-type="linenumber">25</context>
+          <context context-type="linenumber">24</context>
         </context-group>
       </trans-unit>
       <trans-unit id="7384835656329310194" datatype="html">
@@ -312,6 +344,46 @@
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/features/portfolio/components/testimonials-section/testimonials-section.component.ts</context>
           <context context-type="linenumber">37</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="2400857379190014720" datatype="html">
+        <source> Impressum </source>
+        <target> Impressum </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/shared/components/footer/footer.component.html</context>
+          <context context-type="linenumber">4</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="5455880547060138700" datatype="html">
+        <source> Datenschutz </source>
+        <target> Data privacy </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/shared/components/footer/footer.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="7883631339141265735" datatype="html">
+        <source> Designt und entwickelt von <x id="START_LINK" ctype="x-a" equiv-text="&lt;a
+      href=&quot;https://jonas-wolfram.de&quot;
+      target=&quot;_blank&quot;
+      class=&quot;footer__jonas-wolfram-link&quot;
+    &gt;"/> Jonas Wolfram <x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/a&gt;"/></source>
+        <target> Designed and developed by <x id="START_LINK" ctype="x-a" equiv-text="&lt;a
+      href=&quot;https://jonas-wolfram.de&quot;
+      target=&quot;_blank&quot;
+      class=&quot;footer__jonas-wolfram-link&quot;
+    &gt;"/> Jonas Wolfram <x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/a&gt;"/></target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/shared/components/footer/footer.component.html</context>
+          <context context-type="linenumber">55,63</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="2821179408673282599" datatype="html">
+        <source>Home</source>
+        <target>Home</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/shared/components/header/header.component.html</context>
+          <context context-type="linenumber">97</context>
         </context-group>
       </trans-unit>
     </body>
